fixed content too wide because of section width 100% on mobile

--- a/divi-child/src/scss/_footer.scss
+++ b/divi-child/src/scss/_footer.scss
@@ -1,5 +1,8 @@
 footer {
   padding-top: 120px;
+  @include diviBreakpoint(980) {
+    padding-left: 30px;
+  }
   .et_builder_inner_content {
     .et_pb_section {
       padding-bottom: 20px;
@@ -7,9 +10,6 @@ footer {
         width: 90%;
         max-width: 90%;
         @include diviBreakpoint(980) {
-          width: 100% !important;
-          max-width: 100% !important;
-          margin: 0 30px !important;
           padding-bottom: 0;
           padding-top: 0;
         }
@@ -65,8 +65,6 @@ footer {
         @include diviBreakpoint(980) {
           width: 100%;
           max-width: 100%;
-
-          margin-left: 30px;
         }
       }
       /* addresses */
@@ -78,7 +76,6 @@ footer {
           max-width: 100%;
           padding-top: 10px;
           padding-bottom: 10px;
-          margin-left: 30px;
         }
         .et_pb_column_4_tb_footer {
           @include diviBreakpoint(980) {
@@ -89,7 +86,7 @@ footer {
             float: left;
             margin-right: 3vw;
             @include diviBreakpoint(980) {
-              margin-right: 20px;
+              margin-right: 0;
             }
             .et_pb_text_inner {
               p {
@@ -135,7 +132,6 @@ footer {
               a {
                 @include diviBreakpoint(980) {
                   margin-left: 0;
-                  margin-right: 15px;
                 }
               }
             }
@@ -152,7 +148,6 @@ footer {
         @include diviBreakpoint(980) {
           width: 100%;
           max-width: 100%;
-          margin-left: 30px;
           display: flex;
           flex-direction: column;
           align-items: flex-start;
@@ -188,7 +183,7 @@ footer {
           padding-left: 0;
           ul {
             li {
-              margin-right: 20px;
+              margin-right: 0;
             }
           }
         }
