--- a/divi-child/src/scss/_main-navigation.scss
+++ b/divi-child/src/scss/_main-navigation.scss
@@ -22,6 +22,7 @@ header {
     padding: 20px 30px;
 
     .menu-row {
+      overflow: auto;
       background-color: $wink-beige;
       position: fixed;
       width: 100%;
@@ -116,6 +117,9 @@ header {
                 background-color: transparent;
                 border: $wink-tag-border-size $wink-black;
                 color: $wink-black;
+                @include diviBreakpoint(980) {
+                  border: $wink-tag-border-size transparent !important;
+                }
               }
               &.active {
                 color: inherit;
@@ -163,7 +167,7 @@ header {
               }
               a {
                 @include diviBreakpoint(980) {
-                  font-size: 50px;
+                  font-size: 3em;
                   padding-right: 0;
                 }
               }
@@ -182,6 +186,9 @@ header {
                     top: 8px;
                     font-size: 30px;
                   }
+                  &:first-child {
+                    padding-left: 0;
+                  }
                 }
               }
             }
@@ -193,6 +200,12 @@ header {
       width: 100%;
       min-width: 100%;
       padding: 17px 0 0;
+      .et_pb_column_0_tb_header,
+      .et_pb_column_1_tb_header {
+        @include diviBreakpoint(980) {
+          width: 49% !important;
+        }
+      }
       .wink-mainmenu-toggle-container {
         @include diviBreakpoint(980) {
           width: initial;
